force-app/main/default/objects/Agents_Schedule__mdt/Agents_Schedule__mdt.object-meta.xml
<CustomObject>
    <label>Agents Schedule</label>
    <pluralLabel>Agents Schedules</pluralLabel>
</CustomObject>