force-app/main/default/objects/Agents_Schedule__mdt/fields/Monday__c.field-meta.xml
<CustomField>
    <fullName>Monday__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>