force-app/main/default/objects/Agents_Schedule__mdt/fields/Sunday__c.field-meta.xml
<CustomField>
    <fullName>Sunday__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>