force-app/main/default/objects/Agents_Schedule__mdt/fields/Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Tuesday__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>