force-app/main/default/objects/Agents_Schedule__mdt/listViews/Agents_Days_of_Work.listView-meta.xml
<ListView>
    <fullName>Agents_Days_of_Work</fullName>
    <columns>DeveloperName</columns>
    <columns>Monday__c</columns>
    <columns>Tuesday__c</columns>
    <columns>Wednesday__c</columns>
    <columns>Thursday__c</columns>
    <columns>Friday__c</columns>
    <columns>Saturday__c</columns>
    <columns>Sunday__c</columns>
    <filterScope>Everything</filterScope>
    <label>Agents Days of Work</label>
</ListView>